--- a/challenge/experimentalist_benchmarking.ipynb
+++ b/challenge/experimentalist_benchmarking.ipynb
@@ -621,7 +621,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "40rWpRCKfcGL"
       },
@@ -637,7 +637,7 @@
         "# YOU MAY CHANGE THESE PARAMETERS\n",
         "num_discovery_simulations = 10\n",
         "bms_epochs = 10 # Note, to speed things up, you can set bms_epochs = 10 or even bms_epochs = 1 (this will lead to poor performance of the BMS regressor but the other two theorists will still fit)\n",
-        "# --- Reproducibility ---\n",
+        "# --- Reproducibility ----\n",
         "SEED = 42\n",
         "import numpy as np, random\n",
         "np.random.seed(SEED)\n",
